--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/kennedy-miller-8467a5308/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com/Kennedy-Miller/Kennedy-Miller.github.io.git">
+          <a target="_blank" id="socialicon-2" href="Kennedy-Miller-Kennedy-Miller.github.io">
             <i class="fab fa-github"></i>
           </a>
           <a target="_blank" id="socialicon-3" href="https://twitter.com/bug4unky">
